# Audio

./: README.md  build.gradle  gradle.properties  settings.gradle
BinMedia/: build.gradle
BinMedia/src/androidTest/java/cn/zybwz/binmedia/: ExampleInstrumentedTest.kt
BinMedia/src/main/: AndroidManifest.xml
BinMedia/src/main/cpp/: CMakeLists.txt  OpenSLESRecord.cpp  RecordBuffer.cpp  audio-cache-pool.c  audio_cache_pool.c  ffmpeg-cmd.c  filter-util.c  hello.cpp  native-audio-decoder.c  native-audio-encoder.c  native-audio-filter.c  native-audio-player.c  native-audio-wave.c  native-audio.cpp  native-cutil.c  native-lib.c  native-player.c  native-recorder.c  native-util.cpp  opensl-player.c  opensl-recorder.c
BinMedia/src/main/cpp/ffmpeg/fftools/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h
BinMedia/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
BinMedia/src/main/cpp/person/: OpenSLESRecord.h  RecordBuffer.h  audio-cache-pool.h  audio-common.h  filter-util.h  hello.h  native-audio-common.h  native-audio-decoder.h  native-audio-encoder.h  native-audio-filter.h  native-audio-player.h  native-audio-wave.h  native-lib.h  native-player.h  native-util.h  opensl-player.h
BinMedia/src/main/java/cn/zybwz/binmedia/: BinPlayer.java  FFmpegCmd.java  FFmpegCmd.kt  FilterUtil.java  OpenSLRecorder.java  RecorderParams.java  Util.kt
BinMedia/src/main/java/cn/zybwz/binmedia/bean/: AudioInfo.java  FilterInfo.java  FilterInfo.kt
BinMedia/src/main/java/cn/zybwz/binmedia/widget/: BaseEditView.kt  CropView.kt  WaveView.kt
BinMedia/src/test/java/cn/zybwz/binmedia/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/cn/zybwz/audio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/zybwz/audio/: App.kt  IMainActivityEvent.kt  MainActivity.kt  MainActivityVM.kt
app/src/main/java/cn/zybwz/audio/adapter/: BaseAdapter.kt  FilterAdapter.kt  RecordAdapter.kt  ToolAdapter.kt
app/src/main/java/cn/zybwz/audio/bean/: FilterBean.kt  RecordBean.kt  ToolBean.kt
app/src/main/java/cn/zybwz/audio/db/: AudioDataBase.kt  RecordDao.kt
app/src/main/java/cn/zybwz/audio/ui/: IMainActivityEvent.kt  MainActivity.kt  MainActivityVM.kt
app/src/main/java/cn/zybwz/audio/ui/audioedit/crop/: AudioCropActivity.kt  AudioCropActivityVM.kt  IAudioCropEvent.kt
app/src/main/java/cn/zybwz/audio/ui/audioedit/fade/: AudioFilterFragment.kt
app/src/main/java/cn/zybwz/audio/ui/audioedit/filter/: FilterFragment.kt  FilterFragmentVM.kt
app/src/main/java/cn/zybwz/audio/ui/audioedit/format/: TransformActivity.kt  TransformActivityVM.kt
app/src/main/java/cn/zybwz/audio/ui/audioplay/: AudioFragment.kt  AudioPlayActivity.kt  AudioPlayActivityVM.kt  AudioPlayFragmentVM.kt  IAudioEvent.kt  IAudioPlayEvent.kt
app/src/main/java/cn/zybwz/audio/ui/recordfiles/: RecordFilesActivity.kt  RecordFilesLocalModel.kt  RecordFilesVM.kt
app/src/main/java/cn/zybwz/audio/ui/vosk/: VoskActivity.kt  VoskActivityVM.kt  VoskFragment.kt
app/src/main/java/cn/zybwz/audio/utils/: AudioConstant.kt  FileUtils.kt  Util.kt
app/src/main/java/cn/zybwz/audio/view/: AudioInfoDialog.kt  FormatRenameDialog.kt
app/src/main/res/anim/: dialog_enter.xml
app/src/main/res/drawable/: bg_dd_10.xml
app/src/main/res/layout/: activity_audio_crop.xml  activity_audio_play.xml  activity_main.xml  activity_record_files.xml  activity_transform.xml  activity_vosk.xml  dialog_audio_info.xml  dialog_format_rename.xml  fragment_audio.xml  fragment_audio_filter.xml  fragment_filter.xml  fragment_vosk.xml  item_filter.xml  item_record.xml  item_tool.xml
app/src/main/res/values/: colors.xml  strings.xml  style.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/zybwz/audio/: ExampleUnitTest.kt
base/: build.gradle
base/src/androidTest/java/cn/zybwz/base/: ExampleInstrumentedTest.kt
base/src/main/: AndroidManifest.xml
base/src/main/java/cn/zybwz/base/: BaseActivity.kt  BaseFactory.kt  BaseFragment.kt  BaseViewModel.kt
base/src/main/java/cn/zybwz/base/utils/: LogUtil.kt  ToastUtil.kt
base/src/main/res/values/: colors.xml
base/src/test/java/cn/zybwz/base/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
